<resources>
    <string name="app_name">Guanzon App</string>
    <string name="title_activity_dashboard">Guanzon App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guanzon App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_item_cart">Item Cart</string>
    <string name="menu_my_gcard">My Gcard</string>
    <string name="menu_redeemables">Redeemables</string>
    <string name="menu_gcard_orders">Gcard Orders</string>
    <string name="menu_gcard_transactions">Gcard Transactions</string>
    <string name="menu_account_settings">Account Settings</string>
    <string name="menu_find_us">Find Us</string>
    <string name="menu_customer_service">Customer Service</string>
    <string name="menu_about">About</string>
    <string name="menu_subtitle_gcard">GCard</string>
    <string name="menu_subtitle_system">System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>