<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.guanzongroup.com.applauncher.Fragment.Fragment_Dashboard"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="org.guanzongroup.com.applauncher.ui.gallery.GalleryFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="org.rmj.guanzongroup.marketplace.Fragment.Fragment_Orders"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="org.rmj.guanzongroup.marketplace.Fragment.Fragment_Wishlist"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/nav_item_cart"
        android:name="org.rmj.guanzongroup.marketplace.Fragment.Fragment_ItemCart"
        android:label="@string/menu_item_cart"
        tools:layout="@layout/fragment_item_cart" />

    <fragment
        android:id="@+id/nav_my_gcard"
        android:name="org.rmj.guanzongroup.digitalgcard.Fragments.Fragment_MyGcardBaseContainer"
        android:label="@string/menu_my_gcard"
        tools:layout="@layout/fragment_my_gcard_base_container" >
        <argument android:name="gcardInstance"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_redeemables"
        android:name="org.rmj.guanzongroup.digitalgcard.Fragments.Fragment_MyGcardBaseContainer"
        android:label="@string/menu_redeemables"
        tools:layout="@layout/fragment_my_gcard_base_container" />

    <fragment
        android:id="@+id/nav_gcard_orders"
        android:name="org.rmj.guanzongroup.digitalgcard.Fragments.Fragment_MyGcardBaseContainer"
        android:label="@string/menu_gcard_orders"
        tools:layout="@layout/fragment_my_gcard_base_container" />

    <fragment
        android:id="@+id/nav_gcard_transactions"
        android:name="org.rmj.guanzongroup.digitalgcard.Fragments.Fragment_MyGcardBaseContainer"
        android:label="@string/menu_gcard_transactions"
        tools:layout="@layout/fragment_my_gcard_base_container" />

    <fragment
        android:id="@+id/nav_account_settings"
        android:name="org.rmj.guanzongroup.digitalgcard.Fragments.Fragment_AccountSettings"
        android:label="@string/menu_account_settings"
        tools:layout="@layout/fragment_my_gcard_base_container" />

    <fragment
        android:id="@+id/nav_find_us"
        android:name="org.rmj.guanzongroup.digitalgcard.Fragments.Fragment_FindUs"
        android:label="@string/menu_find_us"
        tools:layout="@layout/fragment_my_gcard_base_container" />

    <fragment
        android:id="@+id/nav_customer_service"
        android:name="org.rmj.guanzongroup.digitalgcard.Fragments.Fragment_CustomerService"
        android:label="@string/menu_customer_service"
        tools:layout="@layout/fragment_customer_service" />
</navigation>